--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,10 @@
 spring.application.name=BusBookingApp
 
 
-spring.datasource.url= jdbc:mysql://localhost:3306/demoapp
+spring.datasource.url= jdbc:mysql://localhost:3306/busApplication
 spring.datasource.username = root
 spring.datasource.password = Oea75357@
 spring.driver = jdbc.mysql.Driver
 
-spring,jpa.hibernate.auto-ddl=update
-
-spring.jpa.properties.hibernate.format_sql =true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true=true
