changes to classes and new classes added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,10 @@ spring.datasource.username = root
 spring.datasource.password = Oea75357@
 spring.driver = jdbc.mysql.Driver
 
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.format_sql=true=true
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.format_sql=true
+
+
+spring.security.oauth2.client.registration.google.client-id = 155084159796-uij64d08gqb38bg0m78bbo6424nn7ll5.apps.googleusercontent.com"
+spring.security.oauth2.client.registration.google.client-secret= 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
+
