--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,11 +6,11 @@ spring.datasource.username = root
 spring.datasource.password = Oea75357@
 spring.driver = jdbc.mysql.Driver
 
-spring.security.oauth2.client.registration.google.client-id = ${GOOGLE_CLIENT-ID}
-spring.security.oauth2.client.registration.google.client-secret= ${GOOGLE_CLIENT_SECRET}
-spring.config.import = file:secret.properties
+#spring.security.oauth2.client.registration.google.client-id = ${GOOGLE_CLIENT-ID}
+#spring.security.oauth2.client.registration.google.client-secret= ${GOOGLE_CLIENT_SECRET}
+#spring.config.import = file:secret.properties
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 
 
